--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -32,29 +32,51 @@
         <p></p>
         <h2></h2>
         <section class="pick_and_feed">
-            <div class="pick_header"></div>
-            <p></p>
-            <div class="" bear_picture></div>
-            <div class="choose_amount_line">
+            <div class="pick_header">
+                <p>THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!</p>
+            </div>
+            <p>Even though the Zoo has been able to reopen, we are at a greatly reduced capacity with educational
+                programs and public <br>
+                and private events cancelled or postponed for additional months. We need you now more than ever to
+                help ensure that we overcome<br>
+                these challenges. We have been actively raising funds in the community, and we are grateful for the
+                generosity. But much more<br>
+                support is still needed, and we need your help! Please consider a gift today – no matter what size –
+                to help us sustain our mission.</p>
+            <div class="next_header">
+                <p>Donation Information</p>
+            </div>
+            <section class="inner_block">
+                <div class="inner_block_header">
+                    <p>Pick and feed a friend</p>
+                </div>
+                <div class="second_inner_block_header">
+                    <p>We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
+                </div>
+
+                <div class="bear_picture">
+                    <img src="../../assets/images/donation/4.png" alt="number">
+                    <img src="../../assets/images/donation/multi.png" alt="multiply">
+                    <img src="../../assets/images/donation/Vector.png" alt="Bear">
+                </div>
+                <div class="choose_amount_line">
+                    <p>Amount</p>
+                    <img src="" alt="">
+                </div>
+                <div class="choose_amount_input"></div>
+                <div>
+                    <input type="radio" id="monthly" value="monthly">
+                    <label for="monthly">Monthly</label>
+                </div>
+                <div>
+                    <input type="radio" id="once" value="once" checked>
+                    <label for="monthly">Once</label>
+                </div>
+                <button></button>
                 <p></p>
-                <img src="" alt="">
-            </div>
-            <div class="choose_amount_input"></div>
-            <div>
-                <input type="radio" id="monthly" value="monthly">
-                <label for="monthly">Monthly</label>
-            </div>
-            <div>
-                <input type="radio" id="once" value="once" checked>
-                <label for="monthly">Once</label>
-            </div>
-            <button></button>
-            <p></p>
+            </section>
         </section>
-
     </main>
-
-
 </body>
 <footer>
     <div class="logo_reg">
