feat: add the link to donatepage

--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -47,15 +47,19 @@
                 <p>Donation Information</p>
             </div>
             <section class="inner_block">
-                <div class="inner_block_header">
-                    <p>Pick and feed a friend</p>
+                <div>
+                    <p class="inner_block_header">Pick and feed a friend</p>
                 </div>
-                <div class="second_inner_block_header">
-                    <p>We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
+                <div>
+                    <p class="second_inner_block_header">We know the animals bring you joy, and in these extraordinary
+                        times, we’re glad.</p>
                 </div>
 
                 <div class="bear_picture">
-                    <img src="../../assets/images/donation/4.png" alt="number">
+                    <div class="number">
+                        <img src="../../assets/images/donation/4.png" alt="number">
+                        <p>Panda diet for the day.</p>
+                    </div>
                     <img src="../../assets/images/donation/multi.png" alt="multiply">
                     <img src="../../assets/images/donation/Vector.png" alt="Bear">
                 </div>
