fix:fix for for footer and links

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -21,9 +21,11 @@
                 <a class="nav-item" href="#About">About</a>
                 <a class="nav-item" href="#Map">Map</a>
                 <a class="nav-item" href="#Zoos">Zoos</a>
-                <a class="nav-item" href="#Donatee">Donate</a>
+                <a class="nav-item" href="../donate/index.html">Donate</a>
                 <a class="nav-item" href="#Contact us">Contact us</a>
-                <div class="desined">Desined by &#169;</div>
+                <a class="nav-item desined"
+                    href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1&t=EN9R5W8uyx9HLP1o-0">Desined
+                    by &#169;</a>
             </nav>
         </header>
         <div class="circle_with_text">
@@ -59,44 +61,44 @@
                 <img src="../../assets/images/backstage/b21a83da76a16ebdbfe99a57b8d03978.png" alt="leavs">
             </div>
         </section>
-        <section class="animals_cards">
-            <div class="galery-item galery-item--1">
-                <img src="../../assets/images/animalsСards/panda.png" class="galery_img" alt="panda">
-                <p class="galery_header">giant Pandas</p>
-                <p class="galery_text">Native to Southwest China</p>
+        <section class="animals_cards_container">
+            <div class="animals_cards">
+                <div class="galery-item galery-item--1">
+                    <img src="../../assets/images/animalsСards/panda.png" class="galery_img" alt="panda">
+                    <p class="galery_header">giant Pandas</p>
+                    <p class="galery_text">Native to Southwest China</p>
+                </div>
+                <div class="galery-item galery-item--2">
+                    <img src="../../assets/images/animalsСards/bird.png" class="galery_img" alt="bird">
+                    <p class="galery_header">Eagles</p>
+                    <p class="galery_text">Native to South America</p>
+                </div>
+                <div class="galery-item galery-item--3">
+                    <img src="../../assets/images/animalsСards/gorila.png" class="galery_img" alt="leopard">
+                    <p class="galery_header">Gorillas</p>
+                    <p class="galery_text">Native to Congo</p>
+                </div>
+                <div class="galery-item galery-item--4">
+                    <img src="../../assets/images/animalsСards/lenivec.png" class="galery_img" alt="gorila">
+                    <p class="galery_header">Two-toed Sloth</p>
+                    <p class="galery_text">Mesoamerica, South America</p>
+                </div>
+                <div class="galery-item galery-item--5">
+                    <img src="../../assets/images/animalsСards/leop.png" class="galery_img" alt="aligator">
+                    <p class="galery_header">cheetahs</p>
+                    <p class="galery_text">Native to Africa</p>
+                </div>
+                <div class="galery-item galery-item--6">
+                    <img src="../../assets/images/animalsСards/pinguin.png" class="galery_img" alt="pinguin">
+                    <p class="galery_header">Penguins</p>
+                    <p class="galery_text">Native to Antarctica</p>
+                </div>
+                <div class="arrow">
+                    <button class="arrow_left" onclick="plusSlides(-1)"></button>
+                    <button class="arrow_right" onclick="plusSlides(1)"></button>
+                </div>
+                <button class="galery_btn" onclick=""></button>
             </div>
-            <div class="galery-item galery-item--2">
-                <img src="../../assets/images/animalsСards/bird.png" class="galery_img" alt="bird">
-                <p class="galery_header">Eagles</p>
-                <p class="galery_text">Native to South America</p>
-            </div>
-            <div class="galery-item galery-item--3">
-                <img src="../../assets/images/animalsСards/gorila.png" class="galery_img" alt="leopard">
-                <p class="galery_header">Gorillas</p>
-                <p class="galery_text">Native to Congo</p>
-            </div>
-            <div class="galery-item galery-item--4">
-                <img src="../../assets/images/animalsСards/lenivec.png" class="galery_img" alt="gorila">
-                <p class="galery_header">Two-toed Sloth</p>
-                <p class="galery_text">Mesoamerica, South America</p>
-            </div>
-            <div class="galery-item galery-item--5">
-                <img src="../../assets/images/animalsСards/leop.png" class="galery_img" alt="aligator">
-                <p class="galery_header">cheetahs</p>
-                <p class="galery_text">Native to Africa</p>
-            </div>
-            <div class="galery-item galery-item--6">
-                <img src="../../assets/images/animalsСards/pinguin.png" class="galery_img" alt="pinguin">
-                <p class="galery_header">Penguins</p>
-                <p class="galery_text">Native to Antarctica</p>
-            </div>
-            <div class="arrow">
-                <button class="arrow_left" onclick="plusSlides(-1)"></button>
-                <button class="arrow_right" onclick="plusSlides(1)"></button>
-            </div>
-            <div class="palmphoto"></div>
-            <button class="galery_btn" onclick=""></button>
-            <div class="strelitzia"></div>
         </section>
         <section class="pick_and_feed">
             <div class="inside_block">
@@ -117,8 +119,8 @@
                     <h3 class="how_header">How it works</h3>
                     <div class="widjets">
                         <div class="widjet">
-                            <div class="widjet_img">
-                                <img src="../../assets/images/pikAndFeed/pay.png" alt="card">
+                            <div class="widjet_card">
+                                <img src="../../assets/images/pikAndFeed/pay.png" class="widjet_img" alt="card">
                             </div>
                             <p class="widjet_p">Pay with card</p>
                         </div>
@@ -126,8 +128,8 @@
                             <img src="../../assets/images/pikAndFeed/Vector.png" alt="arrow">
                         </div>
                         <div class="widjet">
-                            <div class="widjet_img">
-                                <img src="../../assets/images/pikAndFeed/zoo.png" alt="plant">
+                            <div class="widjet_card">
+                                <img src="../../assets/images/pikAndFeed/zoo.png" class="widjet_img" alt="plant">
                             </div>
                             <p class="widjet_p">Payment goes to the zoo</p>
                         </div>
@@ -135,8 +137,8 @@
                             <img src="../../assets/images/pikAndFeed/Vector.png" alt="arrow">
                         </div>
                         <div class="widjet">
-                            <div class="widjet_img">
-                                <img src="../../assets/images/pikAndFeed/monkey.png" alt="monkey">
+                            <div class="widjet_card">
+                                <img src="../../assets/images/pikAndFeed/monkey.png" class="widjet_img" alt="monkey">
                             </div>
                             <p class="widjet_p">Your favourite animal gets delicious dish</p>
                         </div>
@@ -207,34 +209,34 @@
                 <p> Subscribe to our news</p>
             </div>
             <div class="email_subtmit">
-                <input type="email" id="subscribe" placeholder="Enter your email" required>
+                <input type="email" class="subscribe_input" placeholder="Enter your email" required>
                 <button class="submit">
                     <img src="../../assets/images/footer/send_btn_activ.png" alt="submit button">
                 </button>
             </div>
         </div>
-        <button class="donate">
+        <a href="../donate/index.html" class="donate">
             <img src="../../assets/images/footer/btn_2.png" alt="donate button">
-        </button>
+        </a>
         <div class="socialMeadia">
-            <div class="facebook">
+            <a href="https://www.facebook.com/" class="facebook">
                 <img src="../../assets/images/footer/facebook.png" alt="facebook">
-            </div>
-            <div class="twitter">
+            </a>
+            <a href="https://twitter.com/" class="twitter">
                 <img src="../../assets/images/footer/twitter.png" alt="twitter">
-            </div>
-            <div class="instagram">
+            </a>
+            <a href="https://www.instagram.com/" class="instagram">
                 <img src="../../assets/images/footer/instagram.png" alt="instagram">
-            </div>
-            <div class="youtube">
-                <img src="../../assets/images/footer/facebook.png" alt="youtube">
-            </div>
+            </a>
+            <a href="https://www.youtube.com/" class="youtube">
+                <img src="../../assets/images/footer/youtube.png" alt="youtube">
+            </a>
         </div>
-        <nav class="menu">
-            <a class="nav-item" href="#About">About</a>
-            <a class="nav-item" href="#Map">Map</a>
-            <a class="nav-item" href="#Zoos">Zoos</a>
-            <a class="nav-item" href="#Contact us">Contact us</a>
+        <nav class="menu footer_menu">
+            <a class="nav-item footer_nav-item" href="#About">About</a>
+            <a class="nav-item footer_nav-item" href="#Map">Map</a>
+            <a class="nav-item footer_nav-item" href="#Zoos">Zoos</a>
+            <a class="nav-item footer_nav-item" href="#Contact us">Contact us</a>
         </nav>
         <div class="signature">
             <P>Designed by Alisa Samborskaya<br>
