fix: fix for header and footer

--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -21,9 +21,11 @@
                 <a class="nav-item" href="#About">About</a>
                 <a class="nav-item" href="#Map">Map</a>
                 <a class="nav-item" href="#Zoos">Zoos</a>
-                <a class="nav-item" href="#Donatee">Donate</a>
+                <a class="nav-item" href="../donate/index.html">Donate</a>
                 <a class="nav-item" href="#Contact us">Contact us</a>
-                <div class="desined">Desined by &#169;</div>
+                <a class="nav-item desined"
+                    href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1&t=EN9R5W8uyx9HLP1o-0">Desined
+                    by &#169;</a>
             </nav>
         </header>
     </section>
@@ -91,39 +93,41 @@
             <p> Subscribe to our news</p>
         </div>
         <div class="email_subtmit">
-            <input type="email" id="subscribe" placeholder="Enter your email" required>
+            <input type="email" class="subscribe_input" placeholder="Enter your email" required>
             <button class="submit">
                 <img src="../../assets/images/footer/send_btn_activ.png" alt="submit button">
             </button>
         </div>
     </div>
-    <button class="donate">
+    <a href="../donate/index.html" class="donate">
         <img src="../../assets/images/footer/btn_2.png" alt="donate button">
-    </button>
+    </a>
     <div class="socialMeadia">
-        <div class="facebook">
+        <a href="https://www.facebook.com/" class="facebook">
             <img src="../../assets/images/footer/facebook.png" alt="facebook">
-        </div>
-        <div class="twitter">
+        </a>
+        <a href="https://twitter.com/" class="twitter">
             <img src="../../assets/images/footer/twitter.png" alt="twitter">
-        </div>
-        <div class="instagram">
+        </a>
+        <a href="https://www.instagram.com/" class="instagram">
             <img src="../../assets/images/footer/instagram.png" alt="instagram">
-        </div>
-        <div class="youtube">
-            <img src="../../assets/images/footer/facebook.png" alt="youtube">
-        </div>
+        </a>
+        <a href="https://www.youtube.com/" class="youtube">
+            <img src="../../assets/images/footer/youtube.png" alt="youtube">
+        </a>
     </div>
-    <nav class="menu">
-        <a class="nav-item" href="#About">About</a>
-        <a class="nav-item" href="#Map">Map</a>
-        <a class="nav-item" href="#Zoos">Zoos</a>
-        <a class="nav-item" href="#Contact us">Contact us</a>
+    <nav class="menu footer_menu">
+        <a class="nav-item footer_nav-item" href="#About">About</a>
+        <a class="nav-item footer_nav-item" href="#Map">Map</a>
+        <a class="nav-item footer_nav-item" href="#Zoos">Zoos</a>
+        <a class="nav-item footer_nav-item" href="#Contact us">Contact us</a>
     </nav>
     <div class="signature">
         <P>Designed by Alisa Samborskaya<br>
             ©RSSchool & ©Yem Digital 2021</p>
     </div>
 </footer>
+<script src="script.js" async defer></script>
+</body>
 
 </html>
