fix: another attemtion to fix donation page

--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <nav class="menu">
                 <div class="logo_reg">
-                    <div class="logo">PetStory online</div>
+                    <a class="logo" href="../main/index.html">PetStory online</a>
                 </div>
                 <a class="nav-item" href="../main/index.html">About</a>
                 <a class="nav-item" href="#Map">Map</a>
@@ -68,39 +68,55 @@
                     <p class="amount_line_text">Amount</p>
                     <div class="amount_line">
 
-                        <img src="../../assets/images/donation/Rectangle 12.png" alt="">
+                        <img src="../../assets/images/donation/Rectangle 12.png" alt="" class="amount_line_relative">
                         <div class="amount_line_scale_divisions">
 
                             <div class="amount_line_scale_division">
-                                <input type="radio" class="division">
+                                <div class="division">
+                                    <input type="radio" class="input_devision">
+                                </div>
                                 <img src="../../assets/images/donation/5000.png" alt="5000">
                             </div>
                             <div class="amount_line_scale_division">
-                                <input type="radio" class="division">
+                                <div class="division">
+                                    <input type="radio" class="input_devision">
+                                </div>
                                 <img src="../../assets/images/donation/2000.png" alt="2000">
                             </div>
                             <div class="amount_line_scale_division">
-                                <input type="radio" class="division">
+                                <div class="division">
+                                    <input type="radio" class="input_devision">
+                                </div>
                                 <img src="../../assets/images/donation/1000.png" alt="1000">
                             </div>
                             <div class="amount_line_scale_division">
-                                <input type="radio" class="division">
+                                <div class="division">
+                                    <input type="radio" class="input_devision">
+                                </div>
                                 <img src="../../assets/images/donation/500.png" alt="500">
                             </div>
                             <div class="amount_line_scale_division">
-                                <input type="radio" class="division">
+                                <div class="division">
+                                    <input type="radio" class="input_devision">
+                                </div>
                                 <img src="../../assets/images/donation/250.png" alt="250">
                             </div>
                             <div class="amount_line_scale_division">
-                                <input type="radio" class="division">
+                                <div class="division">
+                                    <input type="radio" class="input_devision">
+                                </div>
                                 <img src="../../assets/images/donation/100.png" alt="100">
                             </div>
                             <div class="amount_line_scale_division">
-                                <input type="radio" class="division">
+                                <div class="division">
+                                    <input type="radio" class="input_devision">
+                                </div>
                                 <img src="../../assets/images/donation/50.png" alt="50">
                             </div>
                             <div class="amount_line_scale_division">
-                                <input type="radio" class="division">
+                                <div class="division">
+                                    <input type="radio" class="input_devision">
+                                </div>
                                 <img src="../../assets/images/donation/25.png" alt="25">
                             </div>
                         </div>
@@ -135,7 +151,7 @@
 </body>
 <footer>
     <div class="logo_reg">
-        <div class="logo">PetStory online</div>
+        <a class="logo" href="../main/index.html">PetStory online</a>
     </div>
     <div class="subscribe">
         <div class="subscribe_header">
@@ -166,7 +182,7 @@
         </a>
     </div>
     <nav class="menu footer_menu">
-        <a class="nav-item footer_nav-item" href="#About">About</a>
+        <a class="nav-item footer_nav-item" href="../../pages/main/index.html">About</a>
         <a class="nav-item footer_nav-item" href="#Map">Map</a>
         <a class="nav-item footer_nav-item" href="#Zoos">Zoos</a>
         <a class="nav-item footer_nav-item" href="#Contact us">Contact us</a>
