--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <nav class="menu">
                 <div class="logo_reg">
-                    <div class="logo">PetStory online</div>
+                    <a class="logo" href="../main/index.html">PetStory online</a>
                 </div>
                 <a class="nav-item" href="#About">About</a>
                 <a class="nav-item" href="#Map">Map</a>
@@ -202,7 +202,7 @@
     </main>
     <footer>
         <div class="logo_reg">
-            <div class="logo">PetStory online</div>
+            <a class="logo" href="../main/index.html">PetStory online</a>
         </div>
         <div class="subscribe">
             <div class="subscribe_header">
