--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -39,7 +39,7 @@
             <div class="backstage_center">
                 <div class="backstage_img">
                     <img src="../../assets/images/backstage/99e1e2726f758b45089960242daf7bfc.jpg"
-                        alt="photo a man in the hat">
+                        alt="photo a man in the hat" class="backstage_img_cover">
                 </div>
                 <div class="backstage_text">
                     <h2>The Backstage of the Wilderness World.</h2>
@@ -58,7 +58,8 @@
                 </div>
             </div>
             <div class="backstage_right">
-                <img src="../../assets/images/backstage/b21a83da76a16ebdbfe99a57b8d03978.png" alt="leavs">
+                <img src="../../assets/images/backstage/b21a83da76a16ebdbfe99a57b8d03978.png" alt="leaves"
+                    class="leaves">
             </div>
         </section>
         <section class="animals_cards_container">
